--- a/WebApp/Resources/Shared.fr-FR.resx
+++ b/WebApp/Resources/Shared.fr-FR.resx
@@ -120,6 +120,12 @@
   <data name="Close" xml:space="preserve">
     <value>Close FR</value>
   </data>
+  <data name="FieldRequired" xml:space="preserve">
+    <value> FR</value>
+  </data>
+  <data name="FieldTooLong" xml:space="preserve">
+    <value>FieldTooLong FR</value>
+  </data>
   <data name="LoggedInAs" xml:space="preserve">
     <value>Logged in as (FR) </value>
   </data>
