--- a/WebApp/Resources/Shared.en-US.resx
+++ b/WebApp/Resources/Shared.en-US.resx
@@ -117,38 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Email" xml:space="preserve">
-    <value>E-mail</value>
+  <data name="Close" xml:space="preserve">
+    <value>Close</value>
   </data>
-  <data name="InvalidEmail" xml:space="preserve">
-    <value>E-mail format is invalid</value>
-  </data>
-  <data name="Login" xml:space="preserve">
-    <value>Login</value>
-  </data>
-  <data name="MailTaken" xml:space="preserve">
-    <value>This e-mail is already taken!</value>
-  </data>
-  <data name="Name" xml:space="preserve">
-    <value>Name</value>
-  </data>
-  <data name="Password" xml:space="preserve">
-    <value>Password</value>
-  </data>
-  <data name="PasswordNotMatch" xml:space="preserve">
-    <value>Passwords didn't match!</value>
-  </data>
-  <data name="PasswordVerification" xml:space="preserve">
-    <value>Repeat password</value>
-  </data>
-  <data name="RegistrationSucces" xml:space="preserve">
-    <value>Registration succesful!
-You can now login into your accont.</value>
-  </data>
-  <data name="WeakPassword" xml:space="preserve">
-    <value>Password is too weak</value>
-  </data>
-  <data name="WrongCredentials" xml:space="preserve">
-    <value>Password or e-mail is incorrect </value>
+  <data name="LoggedInAs" xml:space="preserve">
+    <value>Logged in as </value>
   </data>
 </root>
