--- a/WebApp/Resources/Authentication/Localization.resx
+++ b/WebApp/Resources/Authentication/Localization.resx
@@ -123,6 +123,9 @@
   <data name="InvalidEmail" xml:space="preserve">
     <value>E-mail format is invalid</value>
   </data>
+  <data name="LinkExpired" xml:space="preserve">
+    <value>Link has expired</value>
+  </data>
   <data name="Login" xml:space="preserve">
     <value>Login</value>
   </data>
@@ -137,6 +140,9 @@
   </data>
   <data name="PasswordNotMatch" xml:space="preserve">
     <value>Passwords didn't match!</value>
+  </data>
+  <data name="PasswordReseted" xml:space="preserve">
+    <value>Password has been chaged</value>
   </data>
   <data name="PasswordVerification" xml:space="preserve">
     <value>Repeat password</value>
