--- a/WebApp/Resources/Shared.pl-PL.resx
+++ b/WebApp/Resources/Shared.pl-PL.resx
@@ -117,11 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Bids" xml:space="preserve">
+    <value>Bids (PL) ? </value>
+  </data>
   <data name="Close" xml:space="preserve">
     <value>Zamknij</value>
   </data>
   <data name="Dark" xml:space="preserve">
     <value>Ciemny</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Szczegóły</value>
   </data>
   <data name="FieldRequired" xml:space="preserve">
     <value>Pole jest wymagane</value>
@@ -146,6 +152,9 @@
   </data>
   <data name="PriceTo" xml:space="preserve">
     <value>Do</value>
+  </data>
+  <data name="Questions" xml:space="preserve">
+    <value>Pytania</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>Szukaj</value>
