--- a/WebApp/Resources/Shared.fr-FR.resx
+++ b/WebApp/Resources/Shared.fr-FR.resx
@@ -117,17 +117,41 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddBid" xml:space="preserve">
+    <value>Place bid (FR)</value>
+  </data>
+  <data name="Answer" xml:space="preserve">
+    <value>Answer (FR)</value>
+  </data>
+  <data name="BidInvalidUser" xml:space="preserve">
+    <value>You can't bid on your own auction (FR)</value>
+  </data>
+  <data name="BidInvalidValue" xml:space="preserve">
+    <value>Bid value is invalid (FR)</value>
+  </data>
   <data name="Bids" xml:space="preserve">
     <value>Bids (FR)</value>
+  </data>
+  <data name="BidToLow" xml:space="preserve">
+    <value>Bid value is too low (FR)</value>
   </data>
   <data name="Close" xml:space="preserve">
     <value>Close FR</value>
   </data>
+  <data name="CreateBid" xml:space="preserve">
+    <value>Bid (FR)</value>
+  </data>
   <data name="Dark" xml:space="preserve">
     <value>Dark (FR)</value>
   </data>
+  <data name="Days" xml:space="preserve">
+    <value>days (fr)</value>
+  </data>
   <data name="Description" xml:space="preserve">
     <value>Description (FR)</value>
+  </data>
+  <data name="EndIn" xml:space="preserve">
+    <value>end in (fr)</value>
   </data>
   <data name="FieldRequired" xml:space="preserve">
     <value> FR</value>
@@ -135,14 +159,35 @@
   <data name="FieldTooLong" xml:space="preserve">
     <value>FieldTooLong FR</value>
   </data>
+  <data name="FieldTooShort" xml:space="preserve">
+    <value>FieldTooShort (FR)</value>
+  </data>
   <data name="HighContrast" xml:space="preserve">
     <value>High Contrast (FR)</value>
+  </data>
+  <data name="InvalidAnswer" xml:space="preserve">
+    <value>Answer format is invalid (FR)</value>
+  </data>
+  <data name="InvalidQuestion" xml:space="preserve">
+    <value>Question format is invalid (FR)</value>
   </data>
   <data name="Light" xml:space="preserve">
     <value>Light (FR)</value>
   </data>
   <data name="LoggedInAs" xml:space="preserve">
     <value>Logged in as (FR) </value>
+  </data>
+  <data name="NewAnswer" xml:space="preserve">
+    <value>Type your answer here (FR)</value>
+  </data>
+  <data name="NewQuestion" xml:space="preserve">
+    <value>Ask your question to seller here.... (FR)</value>
+  </data>
+  <data name="NotLoggedIn" xml:space="preserve">
+    <value>You must be logged in to do this (FR)</value>
+  </data>
+  <data name="NotOwner" xml:space="preserve">
+    <value>Not owner (FR)</value>
   </data>
   <data name="Price" xml:space="preserve">
     <value>Price (FR)</value>
@@ -158,5 +203,8 @@
   </data>
   <data name="Search" xml:space="preserve">
     <value>Search (FR)</value>
+  </data>
+  <data name="SomethingWentWrong" xml:space="preserve">
+    <value>Something went wrong (FR)</value>
   </data>
 </root>
