--- a/WebApp/Resources/Authentication/Localization.fr-FR.resx
+++ b/WebApp/Resources/Authentication/Localization.fr-FR.resx
@@ -117,11 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Company" xml:space="preserve">
+    <value>Company FR</value>
+  </data>
+  <data name="CompanyEmail" xml:space="preserve">
+    <value>CompanyEmail FR</value>
+  </data>
   <data name="Email" xml:space="preserve">
     <value>E-mail FR</value>
   </data>
   <data name="InvalidEmail" xml:space="preserve">
     <value>InvalidEmial FR</value>
+  </data>
+  <data name="Language" xml:space="preserve">
+    <value>Language FR</value>
   </data>
   <data name="LinkExpired" xml:space="preserve">
     <value>Link has expired FR</value>
@@ -149,6 +158,12 @@
   </data>
   <data name="RegistrationSucces" xml:space="preserve">
     <value>RegistrationSucces FR</value>
+  </data>
+  <data name="ThemeType" xml:space="preserve">
+    <value>ThemeType FR</value>
+  </data>
+  <data name="UserType" xml:space="preserve">
+    <value>UserType FR</value>
   </data>
   <data name="WeakPassword" xml:space="preserve">
     <value>WeakPassword FR</value>
