--- a/WebApp/Resources/Authentication/Localization.pl-PL.resx
+++ b/WebApp/Resources/Authentication/Localization.pl-PL.resx
@@ -117,11 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AccountDetails" xml:space="preserve">
+    <value>Szczegóły konta</value>
+  </data>
   <data name="Company" xml:space="preserve">
     <value>Firma</value>
   </data>
   <data name="CompanyEmail" xml:space="preserve">
     <value>Email firmy</value>
+  </data>
+  <data name="EditionSuccess" xml:space="preserve">
+    <value>Edycja się udała!</value>
   </data>
   <data name="Email" xml:space="preserve">
     <value>E-mail</value>
@@ -159,6 +165,15 @@
   <data name="RegistrationSucces" xml:space="preserve">
     <value>Rejestracja się udała!
 Można się teraz zalogować na nowe konto.</value>
+  </data>
+  <data name="SelectComapny" xml:space="preserve">
+    <value>Wybierz firmę</value>
+  </data>
+  <data name="SelectLanguage" xml:space="preserve">
+    <value>Wybierz język</value>
+  </data>
+  <data name="SelectTheme" xml:space="preserve">
+    <value>Wybierz motyw</value>
   </data>
   <data name="ThemeType" xml:space="preserve">
     <value>Typ motywu</value>
