--- a/WebApp/Resources/Authentication/Localization.fr-FR.resx
+++ b/WebApp/Resources/Authentication/Localization.fr-FR.resx
@@ -117,11 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AccountDetails" xml:space="preserve">
+    <value>AccountDetails FR</value>
+  </data>
   <data name="Company" xml:space="preserve">
     <value>Company FR</value>
   </data>
   <data name="CompanyEmail" xml:space="preserve">
     <value>CompanyEmail FR</value>
+  </data>
+  <data name="EditionSuccess" xml:space="preserve">
+    <value>EditionSuccess FR</value>
   </data>
   <data name="Email" xml:space="preserve">
     <value>E-mail FR</value>
@@ -158,6 +164,15 @@
   </data>
   <data name="RegistrationSucces" xml:space="preserve">
     <value>RegistrationSucces FR</value>
+  </data>
+  <data name="SelectComapny" xml:space="preserve">
+    <value>SelectComapny FR</value>
+  </data>
+  <data name="SelectLanguage" xml:space="preserve">
+    <value>SelectLanguage FR</value>
+  </data>
+  <data name="SelectTheme" xml:space="preserve">
+    <value>SelectTheme FR</value>
   </data>
   <data name="ThemeType" xml:space="preserve">
     <value>ThemeType FR</value>
