--- a/WebApp/Resources/Authentication/Localization.resx
+++ b/WebApp/Resources/Authentication/Localization.resx
@@ -135,6 +135,9 @@
   <data name="InvalidEmail" xml:space="preserve">
     <value>E-mail format is invalid</value>
   </data>
+  <data name="ItemsOnPage" xml:space="preserve">
+    <value>Number of elements on list</value>
+  </data>
   <data name="Language" xml:space="preserve">
     <value>Language</value>
   </data>
@@ -171,6 +174,9 @@ You can now login into your accont.</value>
   </data>
   <data name="SelectLanguage" xml:space="preserve">
     <value>Select Language</value>
+  </data>
+  <data name="SelectNumber" xml:space="preserve">
+    <value>Select number</value>
   </data>
   <data name="SelectTheme" xml:space="preserve">
     <value>Select Theme</value>
