--- a/WebApp/Resources/Authentication/Localization.pl-PL.resx
+++ b/WebApp/Resources/Authentication/Localization.pl-PL.resx
@@ -120,6 +120,9 @@
   <data name="AccountDetails" xml:space="preserve">
     <value>Szczegóły konta</value>
   </data>
+  <data name="AuctionsIndex" xml:space="preserve">
+    <value>Dostępne aukcje</value>
+  </data>
   <data name="Company" xml:space="preserve">
     <value>Firma</value>
   </data>
@@ -131,6 +134,9 @@
   </data>
   <data name="Email" xml:space="preserve">
     <value>E-mail</value>
+  </data>
+  <data name="EndDate" xml:space="preserve">
+    <value>Data zakończenia</value>
   </data>
   <data name="InvalidEmail" xml:space="preserve">
     <value>Format e-maila jest niepoprawny.</value>
@@ -153,6 +159,9 @@
   <data name="Name" xml:space="preserve">
     <value>Imię</value>
   </data>
+  <data name="Owner" xml:space="preserve">
+    <value>Wystawiający</value>
+  </data>
   <data name="Password" xml:space="preserve">
     <value>Hasło</value>
   </data>
@@ -164,6 +173,9 @@
   </data>
   <data name="PasswordVerification" xml:space="preserve">
     <value>Powtórz hasło</value>
+  </data>
+  <data name="PublishDate" xml:space="preserve">
+    <value>Data publikacji</value>
   </data>
   <data name="RegistrationSucces" xml:space="preserve">
     <value>Rejestracja się udała!
@@ -180,6 +192,9 @@ Można się teraz zalogować na nowe konto.</value>
   </data>
   <data name="SelectTheme" xml:space="preserve">
     <value>Wybierz motyw</value>
+  </data>
+  <data name="StartDate" xml:space="preserve">
+    <value>Data startu</value>
   </data>
   <data name="ThemeType" xml:space="preserve">
     <value>Typ motywu</value>
