--- a/WebApp/Resources/Shared.pl-PL.resx
+++ b/WebApp/Resources/Shared.pl-PL.resx
@@ -123,6 +123,9 @@
   <data name="Answer" xml:space="preserve">
     <value>Odpowiedz</value>
   </data>
+  <data name="ApiKeyExist" xml:space="preserve">
+    <value>Posiadasz już wygenerowany klucz api</value>
+  </data>
   <data name="BidInvalidUser" xml:space="preserve">
     <value>Nie możesz tworzyć ofert do swojej aukcji</value>
   </data>
@@ -162,6 +165,9 @@
   <data name="FieldTooShort" xml:space="preserve">
     <value>Wprowadzone dane są za krótkie</value>
   </data>
+  <data name="GenerateApikey" xml:space="preserve">
+    <value>Generuj klucz api</value>
+  </data>
   <data name="HighContrast" xml:space="preserve">
     <value>Wysoki kontrast</value>
   </data>
@@ -179,6 +185,9 @@
   </data>
   <data name="NewAnswer" xml:space="preserve">
     <value>Odpowiedz na pytanie...</value>
+  </data>
+  <data name="NewApiKey" xml:space="preserve">
+    <value>Zapisz w bezpiecznym miejscu. Twój klucz api to</value>
   </data>
   <data name="NewQuestion" xml:space="preserve">
     <value>Zadaj pytanie dla sprzedawcy...</value>
