--- a/WebApp/Resources/Authentication/Localization.pl-PL.resx
+++ b/WebApp/Resources/Authentication/Localization.pl-PL.resx
@@ -129,6 +129,9 @@
   <data name="CompanyEmail" xml:space="preserve">
     <value>Email firmy</value>
   </data>
+  <data name="Currency" xml:space="preserve">
+    <value>Waluta</value>
+  </data>
   <data name="EditionSuccess" xml:space="preserve">
     <value>Edycja się udała!</value>
   </data>
@@ -186,6 +189,9 @@ Można się teraz zalogować na nowe konto.</value>
   </data>
   <data name="SelectComapny" xml:space="preserve">
     <value>Wybierz firmę</value>
+  </data>
+  <data name="SelectCurrency" xml:space="preserve">
+    <value>Wybierz walutę</value>
   </data>
   <data name="SelectLanguage" xml:space="preserve">
     <value>Wybierz język</value>
