--- a/WebApp/Resources/Shared.resx
+++ b/WebApp/Resources/Shared.resx
@@ -123,14 +123,26 @@
   <data name="Answer" xml:space="preserve">
     <value>Answer</value>
   </data>
+  <data name="ApiAuthError" xml:space="preserve">
+    <value>An error occured while trying to authenticate. Verify your apikey passed in request header.</value>
+  </data>
   <data name="ApiKeyExist" xml:space="preserve">
     <value>Your account has assigned api key</value>
+  </data>
+  <data name="AuctionEnded" xml:space="preserve">
+    <value>Auction is ended</value>
+  </data>
+  <data name="AuctionIsDraft" xml:space="preserve">
+    <value>Auction is not published yet</value>
   </data>
   <data name="BidInvalidUser" xml:space="preserve">
     <value>You can't bid on your own auction</value>
   </data>
   <data name="BidInvalidValue" xml:space="preserve">
     <value>Bid value is invalid</value>
+  </data>
+  <data name="BidPlaced" xml:space="preserve">
+    <value>Bid has been successfully added</value>
   </data>
   <data name="Bids" xml:space="preserve">
     <value>Bids</value>
@@ -177,6 +189,9 @@
   <data name="InvalidQuestion" xml:space="preserve">
     <value>Question format is invalid</value>
   </data>
+  <data name="InvalidRequestData" xml:space="preserve">
+    <value>Request data was invalid</value>
+  </data>
   <data name="Light" xml:space="preserve">
     <value>Light</value>
   </data>
@@ -192,11 +207,17 @@
   <data name="NewQuestion" xml:space="preserve">
     <value>Ask your question to seller here....</value>
   </data>
+  <data name="NoBidValue" xml:space="preserve">
+    <value>No bid value found in request body</value>
+  </data>
   <data name="NotLoggedIn" xml:space="preserve">
     <value>You must be logged in to do this</value>
   </data>
   <data name="NotOwner" xml:space="preserve">
     <value>You are not owner</value>
+  </data>
+  <data name="NowObserving" xml:space="preserve">
+    <value>You now observe auction: </value>
   </data>
   <data name="Price" xml:space="preserve">
     <value>Price</value>
