--- a/WebApp/Resources/Shared.resx
+++ b/WebApp/Resources/Shared.resx
@@ -198,6 +198,9 @@
   <data name="LoggedInAs" xml:space="preserve">
     <value>Logged in as </value>
   </data>
+  <data name="MessageSent" xml:space="preserve">
+    <value>Message has been sent</value>
+  </data>
   <data name="NewAnswer" xml:space="preserve">
     <value>Type your answer here...</value>
   </data>
