added auction subscription and unsubscription in auction panel

--- a/WebApp/Resources/Shared.pl-PL.resx
+++ b/WebApp/Resources/Shared.pl-PL.resx
@@ -240,4 +240,10 @@
   <data name="SomethingWentWrong" xml:space="preserve">
     <value>Coś poszło nie tak, spróbuj ponownie</value>
   </data>
+  <data name="Subscribe" xml:space="preserve">
+    <value>Subscribe</value>
+  </data>
+  <data name="Unsubscribe" xml:space="preserve">
+    <value>Unsubscribe</value>
+  </data>
 </root>
