--- a/WebApp/Resources/Shared.pl-PL.resx
+++ b/WebApp/Resources/Shared.pl-PL.resx
@@ -165,6 +165,9 @@
   <data name="Description" xml:space="preserve">
     <value>Szczegóły</value>
   </data>
+  <data name="EditAuction" xml:space="preserve">
+    <value>Edytuj aukcję</value>
+  </data>
   <data name="EndIn" xml:space="preserve">
     <value>kończy się za</value>
   </data>
