--- a/WebApp/Resources/Shared.resx
+++ b/WebApp/Resources/Shared.resx
@@ -165,6 +165,9 @@
   <data name="Description" xml:space="preserve">
     <value>Description</value>
   </data>
+  <data name="EditAuction" xml:space="preserve">
+    <value>Edit auction</value>
+  </data>
   <data name="EndIn" xml:space="preserve">
     <value>end in</value>
   </data>
