--- a/WebApp/Resources/Shared.fr-FR.resx
+++ b/WebApp/Resources/Shared.fr-FR.resx
@@ -123,6 +123,9 @@
   <data name="AdminPanel" xml:space="preserve">
     <value>Admin dashboard (FR)</value>
   </data>
+  <data name="Analytics" xml:space="preserve">
+    <value>Analytics (FR)</value>
+  </data>
   <data name="Answer" xml:space="preserve">
     <value>Answer (FR)</value>
   </data>
@@ -153,11 +156,17 @@
   <data name="BidToLow" xml:space="preserve">
     <value>Bid value is too low (FR)</value>
   </data>
+  <data name="Business" xml:space="preserve">
+    <value>Business report (FR)</value>
+  </data>
   <data name="Close" xml:space="preserve">
     <value>Close FR</value>
   </data>
   <data name="CreateBid" xml:space="preserve">
     <value>Bid (FR)</value>
+  </data>
+  <data name="Created" xml:space="preserve">
+    <value>New auctions (FR)</value>
   </data>
   <data name="Dark" xml:space="preserve">
     <value>Dark (FR)</value>
@@ -167,6 +176,9 @@
   </data>
   <data name="Description" xml:space="preserve">
     <value>Description (FR)</value>
+  </data>
+  <data name="Ended" xml:space="preserve">
+    <value>Auctions ended (FR)</value>
   </data>
   <data name="EndIn" xml:space="preserve">
     <value>end in (fr)</value>
@@ -225,6 +237,9 @@
   <data name="NowObserving" xml:space="preserve">
     <value>You now observe auction (FR):</value>
   </data>
+  <data name="Popularity" xml:space="preserve">
+    <value>Categories popularity (FR)</value>
+  </data>
   <data name="Price" xml:space="preserve">
     <value>Price (FR)</value>
   </data>
@@ -242,5 +257,8 @@
   </data>
   <data name="SomethingWentWrong" xml:space="preserve">
     <value>Something went wrong (FR)</value>
+  </data>
+  <data name="TimeSpan" xml:space="preserve">
+    <value>Report time span (days) (FR)</value>
   </data>
 </root>
