--- a/WebApp/Resources/Shared.resx
+++ b/WebApp/Resources/Shared.resx
@@ -123,6 +123,9 @@
   <data name="AdminPanel" xml:space="preserve">
     <value>Admin dashboard</value>
   </data>
+  <data name="Analytics" xml:space="preserve">
+    <value>Analytics</value>
+  </data>
   <data name="Answer" xml:space="preserve">
     <value>Answer</value>
   </data>
@@ -153,11 +156,17 @@
   <data name="BidToLow" xml:space="preserve">
     <value>Bid value is too low</value>
   </data>
+  <data name="Business" xml:space="preserve">
+    <value>Business report</value>
+  </data>
   <data name="Close" xml:space="preserve">
     <value>Close</value>
   </data>
   <data name="CreateBid" xml:space="preserve">
     <value>Bid</value>
+  </data>
+  <data name="Created" xml:space="preserve">
+    <value>New auctions</value>
   </data>
   <data name="Dark" xml:space="preserve">
     <value>Dark</value>
@@ -167,6 +176,9 @@
   </data>
   <data name="Description" xml:space="preserve">
     <value>Description</value>
+  </data>
+  <data name="Ended" xml:space="preserve">
+    <value>Auctions ended</value>
   </data>
   <data name="EndIn" xml:space="preserve">
     <value>end in</value>
@@ -225,6 +237,9 @@
   <data name="NowObserving" xml:space="preserve">
     <value>You now observe auction: </value>
   </data>
+  <data name="Popularity" xml:space="preserve">
+    <value>Categories popularity</value>
+  </data>
   <data name="Price" xml:space="preserve">
     <value>Price</value>
   </data>
@@ -242,5 +257,8 @@
   </data>
   <data name="SomethingWentWrong" xml:space="preserve">
     <value>Something went wrong</value>
+  </data>
+  <data name="TimeSpan" xml:space="preserve">
+    <value>Report time span (days)</value>
   </data>
 </root>
